--- a/Desenvolvimento de Aplicações/Aula 2/site/cursos/cursos.html
+++ b/Desenvolvimento de Aplicações/Aula 2/site/cursos/cursos.html
@@ -6,11 +6,11 @@
     <body>
         <h2>Bem vindos ao nossos cursos on-line gratuitos</h2>       
         <ol>
-           <li><a href="html/html.html" target="_blank">Curso de HTML</a></li> 
-           <li><a href="./css/css.html" target="_self">Curso de CSS</a></li> 
-           <li><a href="javascript/javascript.html" target="_blank">Curso de Javascript</a></li>           
+           <li><h4><a href="html/html.html" target="_self">Curso de HTML</a></h4></li> 
+           <li><h4><a href="./css/css.html" target="_self">Curso de CSS</a></h4></li> 
+           <li><h4><a href="javascript/javascript.html" target="_self">Curso de Javascript</a></h4></li>           
         </ol>
 
-         <h3><a href="../../site/index.html" target="_blank">Voltar ao a Página Princial</a</h3> 
+         <h3><a href="../../site/index.html" target="_self">Voltar ao a Página Princial</a</h3> 
     </body>
 </html>
