--- a/Desenvolvimento de Aplicações/Aula 2/site/cursos/html/html.html
+++ b/Desenvolvimento de Aplicações/Aula 2/site/cursos/html/html.html
@@ -4,8 +4,38 @@
         <title>Curso on-line</title>
     </head>
     <body>
-        <h2>Curso de HTML</h2>
+        <h1>Curso de HTML</h1>
         <img src="../../imagens/html.png" alt="Logo HTML">
+        <h2>Conteudo HTML:</h2>
+        <ol>
+        <li>
+           <p>Estrutura Básica de um Documento HTML: Documento HTML começa com !DOCTYPE html, seguido por html, head, e body.</p>
+        </li>
+        <li>
+        <p>Tags Semânticas: Tags como header, nav, e footer descrevem a estrutura e o propósito do conteúdo.</p>
+        </li>
+        <li>
+           <p>Atributos de HTML: Atributos como href e src fornecem informações adicionais e configuram o comportamento dos elementos.</p>
+        </li>
+        <li>
+           <p>Formulários e Inputs: Elementos de formulário como input e textarea permitem a coleta e envio de dados do usuário.</p>
+        </li>
+        <li>
+           <p>Links e Imagens: Links são criados com a e imagens são inseridas com img, usando atributos como href e src.</p>
+        </li>
+      </ol>
+        <H2>Resumo sobre HTML:</H2>
+        
+        <ul>
+           <p>HTML, ou HyperText Markup Language, é a linguagem padrão usada para criar e estruturar páginas web. Ele fornece a base para a criação de conteúdo na web, permitindo a organização de textos, imagens, vídeos e outros elementos em um formato que os navegadores podem interpretar e exibir. A estrutura básica de um documento HTML é formada pela declaração !DOCTYPE html, seguida pelas tags html, head, e body. O head contém metadados e links para recursos externos, enquanto o body abriga o conteúdo visível da página.</p>
+        </ul>
+        <ul>
+           <p>As tags semânticas são uma parte crucial do HTML moderno, ajudando a descrever a função e a estrutura do conteúdo de forma mais clara. Tags como header, nav, article, e footer organizam o conteúdo em seções significativas, melhorando a acessibilidade e a otimização para motores de busca (SEO). Além disso, HTML permite a inclusão de atributos em suas tags, como href em links e src em imagens, para fornecer informações adicionais e configurar o comportamento dos elementos.</p>
+        </ul>
+        <ul>
+           <p>Os formulários e inputs em HTML permitem a coleta e o envio de dados do usuário através de elementos como input, textarea, e button. A criação de links para outras páginas ou sites é realizada com a tag a, enquanto imagens são incorporadas com a tag img. Esses componentes são fundamentais para criar uma experiência interativa e dinâmica na web, possibilitando a comunicação entre usuários e sites.</p>
+        </ul>
+        
         <h3><a href="../../index.html" target="_self">Voltar ao a Página de Cursos</a</h3> 
     </body>
     <ol>
