--- a/Desenvolvimento de Aplicações/Aula 2/site/cursos/javascript/javascript.html
+++ b/Desenvolvimento de Aplicações/Aula 2/site/cursos/javascript/javascript.html
@@ -4,8 +4,36 @@
         <title>Curso on-line</title>
     </head>
     <body>
-        <h2>Curso de Javascript</h2>
+        <h1>Curso de Javascript</h1>
         <img src="../../imagens/javascript.png">
+        <h2>Conteudo JAVASCRIPT:</h2>
+        <ol>
+            <li>
+                <p>Sintaxe Básica: JavaScript usa uma sintaxe baseada em C, com variáveis, operadores, e estruturas de controle como if, for, e while.</p>
+            </li>
+            <li>
+                <p>Manipulação do DOM: Permite a interação e modificação dinâmica do conteúdo e estrutura das páginas web através do Document Object Model (DOM).</p>
+            </li>
+            <li>
+                <p>Funções e Escopo: Funções são blocos de código reutilizáveis, e o escopo determina a acessibilidade das variáveis dentro do código.</p>
+            </li>
+            <li>
+                <p>Eventos: JavaScript lida com eventos, como cliques e teclas pressionadas, para criar interatividade nas páginas web.</p>
+            </li>
+            <li>
+                <p>Assíncrono e Promessas: Gerencia operações assíncronas com callbacks, promises, e async/await para melhorar a performance e a resposta do aplicativo.</p>
+            </li>
+        </ol>
+        <h2>Resumo sobre JAVASCRIPT:</h2>
+        <ul>
+            <p>JavaScript é uma linguagem de programação essencial para o desenvolvimento web, projetada para adicionar interatividade e dinamismo às páginas. Sua sintaxe é baseada em C, o que facilita a criação de variáveis, operadores e estruturas de controle como loops e condicionais. JavaScript permite que os desenvolvedores escrevam código que executa ações específicas em resposta a eventos, como cliques de botões e movimentação do mouse, proporcionando uma experiência interativa ao usuário.</p>
+        </ul>
+        <ul>
+            <p>Uma das principais características do JavaScript é a capacidade de manipular o DOM (Document Object Model). Isso permite que os desenvolvedores alterem o conteúdo e a estrutura de uma página web de maneira dinâmica, sem a necessidade de recarregar a página inteira. Com a manipulação do DOM, é possível modificar elementos HTML, aplicar estilos CSS e atualizar o conteúdo com base na interação do usuário ou em dados recebidos de servidores.</p>
+        </ul>
+        <ul>
+            <p>JavaScript também lida com operações assíncronas usando callbacks, promessas e a sintaxe async/await. Essas ferramentas são fundamentais para a realização de tarefas como requisições a APIs e carregamento de dados em segundo plano, sem interromper a experiência do usuário. Essa capacidade de gerenciar a execução assíncrona torna o JavaScript uma linguagem poderosa para criar aplicações web modernas e responsivas.</p>
+        </ul>
         <h3><a href="../../index.html" target="_self">Voltar ao a Página de Cursos</a</h3>
         <h1></h1>
     </body>
